# baku

./: AUTHORS  Makefile.am  README  configure.ac
src/: Makefile.am  file_format.h  main.c
src/config/: config.c  config.h
src/cpio/: Makefile.am  common.h  compress.c  compress.h  cpio.h  decompress.c  decompress.h
src/database/: query.c  query.h
src/install/: install.c  install.h
